<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_frameCreation">

    <fragment
        android:id="@+id/nav_frameCreation"
        android:name="com.example.hapticfeedback.ui.frame.FrameFragment"
        android:label="@string/menu_frameCreation"
        tools:layout="@layout/frame_creation" />

    <fragment
        android:id="@+id/nav_sequenceCreation"
        android:name="com.example.hapticfeedback.ui.sequence.SequenceFragment"
        android:label="@string/menu_sequenceCreation"
        tools:layout="@layout/sequence_creation" />

    <fragment
        android:id="@+id/nav_savedFrames"
        android:name="com.example.hapticfeedback.ui.tools.ToolsFragment"
        android:label="@string/menu_savedFrames"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_savedSequences"
        android:name="com.example.hapticfeedback.ui.share.ShareFragment"
        android:label="@string/menu_savedSequences"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_exportFramesSequences"
        android:name="com.example.hapticfeedback.ui.send.SendFragment"
        android:label="@string/menu_exportFramesSequences"
        tools:layout="@layout/fragment_send" />
</navigation>